--- a/modular_beyond/example/web/index.html
+++ b/modular_beyond/example/web/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <!--
+  <head>
+    <!--
     If you are serving your web app in a path other than the root, change the
     href value below to reflect the base path you are serving from.
 
@@ -14,25 +14,67 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="$FLUTTER_BASE_HREF">
+    <base href="$FLUTTER_BASE_HREF" />
 
-  <meta charset="UTF-8">
-  <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+    <meta charset="UTF-8" />
+    <meta content="IE=Edge" http-equiv="X-UA-Compatible" />
+    <meta name="description" content="A new Flutter project." />
 
-  <!-- iOS meta tags & icons -->
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="modular_beyond_example">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+    <!-- iOS meta tags & icons -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="apple-mobile-web-app-title" content="modular_beyond_example" />
+    <link rel="apple-touch-icon" href="icons/Icon-192.png" />
 
-  <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="favicon.png" />
 
-  <title>modular_beyond_example</title>
-  <link rel="manifest" href="manifest.json">
-</head>
-<body>
-  <script src="flutter_bootstrap.js" async></script>
-</body>
+    <title>modular_beyond_example</title>
+    <link rel="manifest" href="manifest.json" />
+
+    <style>
+      body {
+        padding: 0;
+        margin: 0 auto;
+      }
+      .container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        width: 100vw;
+      }
+      .loader {
+        width: 15px;
+        aspect-ratio: 1;
+        border-radius: 50%;
+        animation: l5 1s infinite linear alternate;
+      }
+      @keyframes l5 {
+        0% {
+          box-shadow: 20px 0 #000, -20px 0 #0002;
+          background: #000;
+        }
+        33% {
+          box-shadow: 20px 0 #000, -20px 0 #0002;
+          background: #0002;
+        }
+        66% {
+          box-shadow: 20px 0 #0002, -20px 0 #000;
+          background: #0002;
+        }
+        100% {
+          box-shadow: 20px 0 #0002, -20px 0 #000;
+          background: #000;
+        }
+      }
+    </style>
+  </head>
+
+  <body>
+    <script src="flutter_bootstrap.js" async></script>
+    <div class="container">
+      <div class="loader"></div>
+    </div>
+  </body>
 </html>
